[gd_scene load_steps=14 format=3 uid="uid://chdmofmjjo74u"]

[ext_resource type="Script" uid="uid://cvnesv8qdwrd" path="res://Scripts/title_screen.gd" id="1_ak2if"]
[ext_resource type="Texture2D" uid="uid://o52wehnodme" path="res://Art/Title Screen Frame 1.png" id="2_rhgbh"]
[ext_resource type="Texture2D" uid="uid://bixfq3umsjnxb" path="res://Art/credits.png" id="3_ig5kc"]
[ext_resource type="Texture2D" uid="uid://c80u50k1o1x8d" path="res://Art/Title Screen Frame 2_19.png" id="3_skmiq"]
[ext_resource type="Texture2D" uid="uid://cwakf18ouneru" path="res://Art/Title Screen Frame 3_18.png" id="4_lf08s"]
[ext_resource type="Texture2D" uid="uid://chivpwcsrifao" path="res://Art/Title Screen Frame 4_17.png" id="5_n1yhu"]
[ext_resource type="Texture2D" uid="uid://bbmubyqdrgdwt" path="res://Art/Title Screen Frame 5_16.png" id="6_q7w76"]
[ext_resource type="Texture2D" uid="uid://caughdxbkkilg" path="res://Art/Title Screen Frame 6_15.png" id="7_wot2p"]
[ext_resource type="Texture2D" uid="uid://boc51x48uij3g" path="res://Art/Title Screen Frame 7_14.png" id="8_kvwfe"]
[ext_resource type="Texture2D" uid="uid://bn07yr0ev8xo8" path="res://Art/Title Screen Frame 9_10_11_12.png" id="9_l4tom"]
[ext_resource type="Texture2D" uid="uid://1rmxadx83q7n" path="res://Art/Title Screen Frame 8_13.png" id="10_y8ura"]

[sub_resource type="SpriteFrames" id="SpriteFrames_aav61"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_rhgbh")
}, {
"duration": 1.0,
"texture": ExtResource("3_skmiq")
}, {
"duration": 1.0,
"texture": ExtResource("4_lf08s")
}, {
"duration": 1.0,
"texture": ExtResource("5_n1yhu")
}, {
"duration": 1.0,
"texture": ExtResource("6_q7w76")
}, {
"duration": 1.0,
"texture": ExtResource("7_wot2p")
}, {
"duration": 1.0,
"texture": ExtResource("8_kvwfe")
}, {
"duration": 1.0,
"texture": ExtResource("9_l4tom")
}, {
"duration": 1.0,
"texture": ExtResource("10_y8ura")
}, {
"duration": 1.0,
"texture": ExtResource("10_y8ura")
}, {
"duration": 1.0,
"texture": ExtResource("8_kvwfe")
}, {
"duration": 1.0,
"texture": ExtResource("7_wot2p")
}, {
"duration": 1.0,
"texture": ExtResource("5_n1yhu")
}, {
"duration": 1.0,
"texture": ExtResource("4_lf08s")
}, {
"duration": 1.0,
"texture": ExtResource("3_skmiq")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ak2if"]
bg_color = Color(0.19076231, 0.19076234, 0.19076222, 1)

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_ak2if")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="TitleBackground" type="AnimatedSprite2D" parent="."]
z_index = -1
sprite_frames = SubResource("SpriteFrames_aav61")
frame_progress = 0.23618542

[node name="CreditBackground" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(0, 1500)
texture = ExtResource("3_ig5kc")

[node name="StartButton" type="Button" parent="."]
offset_left = -427.0
offset_right = -166.0
offset_bottom = 132.0
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_ak2if")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ak2if")
theme_override_styles/hover = SubResource("StyleBoxFlat_ak2if")
theme_override_styles/disabled = SubResource("StyleBoxFlat_ak2if")
theme_override_styles/focus = SubResource("StyleBoxFlat_ak2if")
text = "START"

[node name="CreditsButton" type="Button" parent="."]
offset_left = 173.0
offset_right = 434.0
offset_bottom = 132.0
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_ak2if")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ak2if")
theme_override_styles/hover = SubResource("StyleBoxFlat_ak2if")
theme_override_styles/disabled = SubResource("StyleBoxFlat_ak2if")
theme_override_styles/focus = SubResource("StyleBoxFlat_ak2if")
text = "CREDITS"

[node name="BackButton" type="Button" parent="."]
offset_left = 657.0
offset_top = 1873.0
offset_right = 918.0
offset_bottom = 2005.0
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_ak2if")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ak2if")
theme_override_styles/hover = SubResource("StyleBoxFlat_ak2if")
theme_override_styles/disabled = SubResource("StyleBoxFlat_ak2if")
theme_override_styles/focus = SubResource("StyleBoxFlat_ak2if")
text = "BACK"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
